tests/samples/positive/evaluation/eval_order_call_stmt.ax
module eval_order_call_stmt;

fn next(state: *mut i32, expected: i32) -> i32 {
    if *state != expected {
        return 100;
    }
    *state = *state + 1;
    return expected;
}

fn consume(state: *mut i32, value: i32) -> void {
    *state = *state + value;
}

fn main() -> i32 {
    var state: i32 = 0;
    consume(&state, next(&state, 0) + next(&state, 1));
    return state - 3;
}
