tests/samples/negative/core/main_argv_bad_pointee.ax
module main_argv_bad_pointee;

fn main(argc: i32, argv: *mut i32) -> i32 {
    return argc;
}
